--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,11 @@ screenshots/
 *.jpg
 *.jpeg
 
+# Lighthouse reports
+lighthouse-*.html
+analyze-performance.js
+compare-scores.js
+
 # Python
 __pycache__/
 *.py[cod]
